[package]
name = "todooer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive", "wrap_help"] }
console_engine = "2.6.1"
indicatif = { version = "0.17.8", features = ["rayon"] }
md5 = "0.7.0"
rayon = "1.10.0"
walkdir = "2.5.0"
